2008-12-31  Claude Paroz  <claude@2xlibre.net>

	* templates/vertimus/vertimus_detail.html: Add link to module on module
	name in title. Suggested by Gabor Kelemen.

2008-12-31  Claude Paroz  <claude@2xlibre.net>

	* teams/forms.py: Exclude 'coordinator' from role popup.
	* teams/models.py: Add 'coordinator' in role choices.
	* teams/views.py: Compare username instead of objects, because User !=
	Person.

2008-12-30  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	Add the password change form.
	
	* media/css/login.css: .submit-row is not used.
	* media/css/main.css: Adjust .right_actions
	* media/css/style.css: Remove input and option CSS attributes.
	* people/models.py: Add __unicode__ method to return the name
	property.
	* people/urls.py: Add URLs to change the password using the
	Django contrib view.	
	* templates/base.html: Nicer user name and 'Log Out' button. 
	* templates/login.html: Removed obsolete logout_form.html.
	* templates/logout_form.html: Deleted.
	* templates/people/password_change_done.html: Added.
	* templates/people/password_change_form.html: Added.
	* templates/people/person_detail.html: New right menu.
	* templates/register.html: Removed obsolete logout_form.html.

2008-12-30  Claude Paroz  <claude@2xlibre.net>

	* templates/register.html:
	* templates/vertimus/vertimus_detail.html: Translation fixes.
	* vertimus/models.py: Filter out empty string from recipient_list.

2008-12-30  Claude Paroz  <claude@2xlibre.net>

	* people/forms.py: Use ugettext_lazy for class definitions.

2008-12-30  Claude Paroz  <claude@2xlibre.net>

	* people/urls.py: 
	* templates/people/person_detail.html: Fix edit link, translate team
	description.
	* templates/languages/language_release_stats.html: Get translated state
	name.
	* templates/vertimus/vertimus_detail.html: No need of language for
	release link.
	* teams/models.py: Translate ROLE_CHOICES.
	* vertimus/forms.py: Separate test for extension validation.